# TFM-SmolGPT

./: .gitignore  README.md  pyproject.toml
data/: tok4096.model  tok4096.vocab  tok4096Original.model
data/vocabulary/: vocabulario.txt
notebooks/: Generador_QA_COLAB_Teoria_Multi_prompt.ipynb  Paraphrasing_with_gemma.ipynb  Self_revaluating_and_self_refinement.ipynb  TrainQA.ipynb
src/smolgpt/: ask.py  check_token_number.py  check_vocab.py  config.py  count_bos_eos.py  dataset.py  export_vocabulary.py  model.py  preprocess.py  sample.py  script_tokenizer.py  test.py  tokenization_example.py  tools.py  train.py
