[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smolgpt-computer-vision"
version = "0.1.0"
description = "SmolGPT entrenado como un asistente de visión por computador para estudiantes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.2",
    "requests==2.32.3",
    "sentencepiece==0.2.0",
    "tensorboard==2.18.0",
    "torch==2.6.0",
    "tqdm==4.67.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]